* WhatsApp-Web-4J * Version updates across the board * WebSocket bit more power * Local Security update WebSocket usage